--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,12 +7,6 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:id="@+id/container"
-    tools:context="me.juancrg90.android.twitterclient.LoginActivity">
+    tools:context="me.juancrg90.android.twitterclient.main.MainActivity">
 
-    <com.twitter.sdk.android.core.identity.TwitterLoginButton
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
-        android:layout_centerInParent="true"
-        android:id="@+id/twitterLogonButton"/>
 </RelativeLayout>
